--- a/pj1/css/style.css
+++ b/pj1/css/style.css
@@ -1,6 +1,10 @@
 * {
 	box-sizing: border-box;
 }
+body {
+	background: rgb(0,0,0);
+	background: linear-gradient(180deg, rgba(0,0,0,0.7371323529411764) 32%, rgba(0,0,0,0.7) 54%, rgba(6,0,8,0.66) 60%, rgba(231,97,237,0.6166841736694677) 100%);
+}
 
 .header {
 	background-color: black;
@@ -33,6 +37,8 @@ h2 {
 	padding-left: 40px;
 	padding-right: 40px;
 	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 a {
 	text-decoration: none !important;
@@ -60,8 +66,8 @@ a {
 	background-color:black
 }
 .links {
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 :-webkit-any-link {
