--- a/pj1/css/style.css
+++ b/pj1/css/style.css
@@ -41,6 +41,8 @@ h2 {
 .menu {
 	padding-left: 40px;
 	padding-right: 20px;
+	position: sticky;
+	top: 0px;
 }
 .bio p {
 	padding-left: 40px;
@@ -81,6 +83,8 @@ a {
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-top: 100px;
+	position: sticky;
+	bottom: 0px;
 }
 
 :-webkit-any-link {
